Bug 1300864 - Define AutoCurrentActiveScrolledRootSetter::SetCurrentActiveScrolledRoot() out of line. r=mstange

MozReview-Commit-ID: FdtGza5wS6f

--HG--
extra : rebase_source : b7731b809c5c52501959355539ed34c0057f8c87